--- a/lesson 94/index.html
+++ b/lesson 94/index.html
@@ -14,7 +14,7 @@
             <h2 class="form-signin-heading">This is form</h2>
             <input type="text" class="form-control">
             <input id="checkbox" type="checkbox">
-            <button class="btn btn-block btn-lg btn-primary">Confirm</button>
+            <button class="btn btn-block btn-lg btn-primary confirmButton">Confirm</button>
         </form>
         <button id="color" class="btn btn-block btn-lg btn-primary">Change color</button>
     </div>
